--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,91 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "4e24968f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
     "\n",
-    "df_prod = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'QTUNITCX', 'CAPACIDADE', 'PONTOREPOSICAO','QTTOTPAL'])\n",
-    "df_end = pd.read_csv(ar_csv.ar_end, header= None, names= col_name.cEnd)\n",
-    "grupo = df_end.groupby('COD').agg(\n",
-    "    ENTRADA = ('ENTRADA', 'sum'),\n",
-    "    SAIDA = ('SAIDA', 'sum'),\n",
-    "    QTDE = ('COD_END', 'count')\n",
-    ").reset_index()\n",
-    "df_07 = pd.read_csv(ar_csv.ar_07, header=None, names= col_name.c07)\n",
-    "df_07 = df_07[df_07['RUA'].between(1, 39)]\n",
-    "df = df_07.merge(df_prod, left_on= 'COD', right_on= 'CODPROD', how= 'inner').drop(columns= 'CODPROD')\n",
-    "df = df.merge(grupo, left_on= 'COD', right_on= 'COD', how= 'left')\n",
-    "df[['ENTRADA', 'SAIDA', 'QTDE']] = df[['ENTRADA', 'SAIDA', 'QTDE']].fillna(0).astype(int)\n",
-    "col = ['ENDERECO', 'GERENCIAL']\n",
-    "for coluna in col:\n",
-    "    df[coluna] = df[coluna].str.replace('.' , '')\n",
-    "    df[coluna] = df[coluna].str.replace(',', '.').astype(float)\n"
+    "df = pd.read_csv(ar_csv.ar_end, header= None,  usecols= [0,1,2,3,4, 6, 7, 18,19])\n",
+    "\n",
+    "df.columns = ['COD_END', 'RUA', 'PREDIO', 'NIVEL', 'APTO', 'COD', 'DESC', 'ENTREDA', 'SAIDA']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "65bb4754",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['COD', 'DESCRICAO', 'DEP', 'RUA', 'PREDIO', 'NIVEL', 'APTO',\n",
-       "       'EMBALAGEM', 'CAP', 'P_REP', 'QTDE_O.S', 'PICKING', 'PULMAO',\n",
-       "       'ENDERECO', 'GERENCIAL', 'QTUNITCX', 'QTTOTPAL', 'CAPACIDADE',\n",
-       "       'PONTOREPOSICAO', 'ENTRADA', 'SAIDA', 'QTDE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "COD                 int64\n",
-       "DESCRICAO          object\n",
-       "DEP               float64\n",
-       "RUA               float64\n",
-       "PREDIO            float64\n",
-       "NIVEL             float64\n",
-       "APTO              float64\n",
-       "EMBALAGEM          object\n",
-       "CAP               float64\n",
-       "P_REP             float64\n",
-       "QTDE_O.S            int64\n",
-       "PICKING            object\n",
-       "PULMAO             object\n",
-       "ENDERECO          float64\n",
-       "GERENCIAL         float64\n",
-       "QTUNITCX            int64\n",
-       "QTTOTPAL            int64\n",
-       "CAPACIDADE          int64\n",
-       "PONTOREPOSICAO      int64\n",
-       "ENTRADA             int64\n",
-       "SAIDA               int64\n",
-       "QTDE                int64\n",
-       "dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -108,178 +42,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESCRICAO</th>\n",
-       "      <th>DEP</th>\n",
+       "      <th>COD_END</th>\n",
        "      <th>RUA</th>\n",
        "      <th>PREDIO</th>\n",
        "      <th>NIVEL</th>\n",
        "      <th>APTO</th>\n",
-       "      <th>EMBALAGEM</th>\n",
-       "      <th>CAP</th>\n",
-       "      <th>P_REP</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PULMAO</th>\n",
-       "      <th>ENDERECO</th>\n",
-       "      <th>GERENCIAL</th>\n",
-       "      <th>QTUNITCX</th>\n",
-       "      <th>QTTOTPAL</th>\n",
-       "      <th>CAPACIDADE</th>\n",
-       "      <th>PONTOREPOSICAO</th>\n",
-       "      <th>ENTRADA</th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESC</th>\n",
+       "      <th>ENTREDA</th>\n",
        "      <th>SAIDA</th>\n",
-       "      <th>QTDE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3201</td>\n",
-       "      <td>ADOC ZERO CAL CICLAMATO 100ML</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>396.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>248</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>310.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>352</td>\n",
-       "      <td>396</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3601</td>\n",
-       "      <td>AGUA SANITARIA Q-BOA 1LT</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>141</td>\n",
-       "      <td>182.0</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>70</td>\n",
-       "      <td>84</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3801</td>\n",
-       "      <td>AGUA SANITARIA Q-BOA 5LT</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>CX/0003/UN</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>330</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>327.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>56</td>\n",
-       "      <td>56</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>49</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5501</td>\n",
-       "      <td>ARAME ZINCADO MORLAN N 020 F 0,89</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>PT/0010/UN</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>90</td>\n",
-       "      <td>90</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6001</td>\n",
-       "      <td>ARAME PANTANAL MORLAN LISO 1000MT</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>UN/0001/UN</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>1000235</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>401</td>\n",
        "      <td>0</td>\n",
+       "      <td>&lt;VAZIO&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1000129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>301</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;VAZIO&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1000024</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>202</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;VAZIO&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1000131</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>301</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;VAZIO&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1000239</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>401</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;VAZIO&gt;</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    COD                          DESCRICAO  DEP   RUA  PREDIO  NIVEL   APTO  \\\n",
-       "0  3201      ADOC ZERO CAL CICLAMATO 100ML  1.0   3.0    24.0    1.0  102.0   \n",
-       "1  3601           AGUA SANITARIA Q-BOA 1LT  1.0  22.0    13.0    1.0  101.0   \n",
-       "2  3801           AGUA SANITARIA Q-BOA 5LT  1.0  22.0    12.0    1.0  102.0   \n",
-       "3  5501  ARAME ZINCADO MORLAN N 020 F 0,89  1.0  25.0    45.0    1.0  101.0   \n",
-       "4  6001  ARAME PANTANAL MORLAN LISO 1000MT  1.0  25.0    43.0    1.0  102.0   \n",
-       "\n",
-       "    EMBALAGEM    CAP  P_REP  ...  PULMAO ENDERECO GERENCIAL  QTUNITCX  \\\n",
-       "0  CX/0012/UN  396.0   79.0  ...     248    309.0     310.0         1   \n",
-       "1  CX/0012/UN   84.0   14.0  ...     141    182.0     180.0         1   \n",
-       "2  CX/0003/UN   56.0   14.0  ...     330    340.0     327.0         1   \n",
-       "3  PT/0010/UN   90.0    9.0  ...       0     89.0      89.0         1   \n",
-       "4  UN/0001/UN   18.0    9.0  ...       0     15.0      15.0         1   \n",
-       "\n",
-       "   QTTOTPAL  CAPACIDADE  PONTOREPOSICAO  ENTRADA  SAIDA  QTDE  \n",
-       "0       352         396              79        0      0     1  \n",
-       "1        70          84              14        0      0     2  \n",
-       "2        56          56              14        0     49     6  \n",
-       "3        90          90               9        0      0     0  \n",
-       "4        18          18               9        0      0     0  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "    COD_END  RUA  PREDIO  NIVEL  APTO  COD       DESC  ENTREDA  SAIDA\n",
+       "4   1000235    1       1      4   401    0   <VAZIO>         0      0\n",
+       "10  1000129    1       3      3   301    0   <VAZIO>         0      0\n",
+       "17  1000024    1       5      2   202    0   <VAZIO>         0      0\n",
+       "18  1000131    1       5      3   301    0   <VAZIO>         0      0\n",
+       "20  1000239    1       5      4   401    0   <VAZIO>         0      0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "COD_END     int64\n",
+       "RUA         int64\n",
+       "PREDIO      int64\n",
+       "NIVEL       int64\n",
+       "APTO        int64\n",
+       "COD         int64\n",
+       "DESC       object\n",
+       "ENTREDA     int64\n",
+       "SAIDA       int64\n",
+       "dtype: object"
       ]
      },
      "metadata": {},
@@ -287,10 +150,14 @@
     }
    ],
    "source": [
-    "df['ENDERECO'] = df['ENDERECO'] + df['ENTRADA']\n",
-    "display(df.columns)\n",
-    "display(df.dtypes)\n",
-    "display(df.head())"
+    "cheio = df.loc[df['COD'] != 0]\n",
+    "cheio = cheio.loc[(cheio['ENTREDA'] == 0) & (cheio['SAIDA'] == 0)]\n",
+    "\n",
+    "vazio = df.loc[df['COD'] == 0]\n",
+    "\n",
+    "display(vazio.head())\n",
+    "display(vazio.dtypes)\n",
+    "\n"
    ]
   }
  ],
